fix problems with horizontal scroll

--- a/src/components/Main/AboutMe/AboutMe.css
+++ b/src/components/Main/AboutMe/AboutMe.css
@@ -24,6 +24,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  width: 53%;
 }
 
 .about-me__title {
@@ -47,7 +48,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 22px;
-  margin: 0 0 80px;
+  margin: 0 0 80px;  
   padding: 0;
 }
 
@@ -70,7 +71,6 @@
   min-width: 270px;
   height: 327px;
   border-radius: 10px;
-  margin-left: 270px;
   object-fit: cover;
 }
 
@@ -164,7 +164,7 @@
   .about-me__pic {
     min-width: 255px;
     height: 307px;
-    margin-left: 49px;
+    margin-left: 45px;
   }  
   .about-me__portfolio-link {
     font-size: 28px;
@@ -180,7 +180,7 @@
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 540px) {
   .about-me { 
     margin: 85px 14px 55px;
   }
@@ -194,7 +194,10 @@
     flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: flex-start;
-  }    
+  }
+  .about-me__info {    
+    width: 100%;
+  }
   .about-me__title {
     font-size: 30px;
     line-height: normal;
