--- a/src/components/Main/Techs/Techs.css
+++ b/src/components/Main/Techs/Techs.css
@@ -77,6 +77,7 @@
     margin: 0 0 22px;
   }
   .techs__text {
+    width: 292px;
     font-size: 12px;    
     line-height: 18px;
     letter-spacing: -0.48px;    
